--- a/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
+++ b/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
@@ -2,9 +2,16 @@
   command = "npm install && npm run build"
   publish = "dist"
 
+# API proxy redirect (must come first)
 [[redirects]]
   from = "/api/*"
   to = "https://cleverdining-2.onrender.com/:splat"
   status = 200
   force = true
+
+# SPA fallback - redirect all other routes to index.html for client-side routing
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
