--- a/backend_source_code/Restaurants/requirements.txt
+++ b/backend_source_code/Restaurants/requirements.txt
@@ -22,6 +22,7 @@ django-extensions==4.1
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+whitenoise==6.7.0
 frozenlist==1.6.0
 git-filter-repo==2.47.0
 h11==0.16.0
