CRITICAL FIX: Resolve authentication issues - Add token refresh, fix registration bug, add environment docs
Backend Changes:
- Add missing /token/refresh/ endpoint (CRITICAL - prevents unexpected logouts)
- Import TokenRefreshView from rest_framework_simplejwt

Frontend Changes:
- Fix duplicate try-catch bug in registration causing false errors
- Implement auto-login after successful registration
- Add validation before form submission
- Improve error handling with specific messages
- Reduce registration code from 147 to 75 lines

Documentation:
- Create ENV_SETUP.md with environment configuration guide
- Create comprehensive README.md for frontend
- Create CRITICAL_FIXES_APPLIED.md with complete change log
- Update .gitignore to properly exclude .env files
- Update netlify.toml with environment configuration

Issues Fixed:
1. Users logged out unexpectedly (no token refresh endpoint)
2. Registration appeared to fail even when successful (duplicate submission)
3. No environment configuration documentation
4. Poor error messages

Impact:
- Login now works reliably
- Registration works with auto-login
- JWT tokens refresh automatically
- Better developer experience
- Production-ready authentication

--- a/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
+++ b/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
@@ -2,6 +2,10 @@
   command = "npm install && npm run build"
   publish = "dist"
 
+[build.environment]
+  # API URL defaults to /api which uses the proxy below
+  VITE_API_URL = "/api"
+
 # API proxy redirect (must come first)
 [[redirects]]
   from = "/api/*"
