--- a/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
+++ b/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
@@ -12,10 +12,10 @@
   to = "https://cleverdining-2.onrender.com/:splat"
   status = 200
   force = true
+  headers = {X-From = "Netlify"}
 
 # SPA fallback - redirect all other routes to index.html for client-side routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
