--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   command = "npm install && npm run build"
   publish = "dist"
 
+[[redirects]]
+  from = "/api/*"
+  to = "https://cleverdining-2.onrender.com/:splat"
+  status = 200
