--- a/backend_source_code/Restaurants/requirements.txt
+++ b/backend_source_code/Restaurants/requirements.txt
@@ -49,7 +49,8 @@ service-identity==24.2.0
 setuptools==80.9.0
 sniffio==1.3.1
 sqlparse==0.5.3
-stripe==12.2.0
+stripe==11.1.1
+razorpay==1.3.00
 twilio==9.6.1
 Twisted==24.11.0
 txaio==23.1.1
