--- a/frontend-sorce-code/device_application_source_code/clever-biz-mobile-main/netlify.toml
+++ b/frontend-sorce-code/device_application_source_code/clever-biz-mobile-main/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build"
+  command = "CI=false npm install && npm run build"
   publish = "dist"
 
 [build.environment]
