--- a/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
+++ b/frontend-sorce-code/dashboard_appllication_source_code/clever-biz-web-main/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build"
+  command = "CI=false npm install && npm run build"
   publish = "dist"
 
 [build.environment]
